Added Styling to cards

--- a/ROSP/index.html
+++ b/ROSP/index.html
@@ -23,13 +23,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   height: 37em;
   width: 23%;
   margin-right: 10px;
+  border-radius: 30px;
+  /* transition: 2s; */
 }
 
 .w3-quarter:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  border: 0.5px solid black;
 }
 .headin{
   font-family: fantasy;
+}
+.menu-img{
+  border-radius: 30px;
 }
 </style>
 </head>
@@ -82,23 +88,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <center><h2 style="font-family:fantasy;margin-bottom: 20px;">Blogs</h2></center>
     <div class="w3-quarter">
-      <img src="./w3images/sandwich.jpeg" alt="Sandwich" style="width:100%">
+      <img class="menu-img" src="./w3images/sandwich.jpeg" alt="Sandwich" style="width:100%">
       <h3>The Perfect Sandwich, A Real NYC Classic</h3>
       <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/steak.jpeg" alt="Steak" style="width:100%">
+      <img class="menu-img" src="./w3images/steak.jpeg" alt="Steak" style="width:100%">
       <h3>Let Me Tell You About This Steak</h3>
       <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/cherries.jpeg" alt="Cherries" style="width:100%">
+      <img class="menu-img" src="./w3images/cherries.jpeg" alt="Cherries" style="width:100%">
       <h3>Cherries, interrupted</h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
       <p>What else?</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/wine.jpeg" alt="Pasta and Wine" style="width:100%">
+      <img class="menu-img" src="./w3images/wine.jpeg" alt="Pasta and Wine" style="width:100%">
       <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
@@ -107,22 +113,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="./w3images/popsicle.jpeg" alt="Popsicle" style="width:100%">
+      <img class="menu-img" src="./w3images/popsicle.jpeg" alt="Popsicle" style="width:100%">
       <h3>All I Need Is a Popsicle</h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/salmon.jpeg" alt="Salmon" style="width:100%">
+      <img class="menu-img" src="./w3images/salmon.jpeg" alt="Salmon" style="width:100%">
       <h3>Salmon For Your Skin</h3>
       <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/sandwich.jpeg" alt="Sandwich" style="width:100%">
+      <img class="menu-img" src="./w3images/sandwich.jpeg" alt="Sandwich" style="width:100%">
       <h3>The Perfect Sandwich, A Real Classic</h3>
       <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./w3images/croissant.jpeg" alt="Croissant" style="width:100%">
+      <img class="menu-img" src="./w3images/croissant.jpeg" alt="Croissant" style="width:100%">
       <h3>Le French</h3>
       <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
