--- a/ROSP/index.html
+++ b/ROSP/index.html
@@ -46,6 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
   <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
+  <a href="./factss/fact1.php" onclick="w3_close()" class="w3-bar-item w3-button">Recipes</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
 </nav>
 
